# moa

./: .gitignore  LICENSE
js/: package.json  pnpm-lock.yaml  tsconfig.json
js/apps/editor/: README.md  index.html  package.json  vite.config.ts
js/apps/editor/src/: App.css  App.tsx  index.css
rust/server/: .env  Cargo.toml  env.example
rust/server/migrations/: 20240101000000_create_documents.sql
rust/server/src/: database.rs  main.rs  models.rs  websocket.rs
rust/server/src/handlers/: documents.rs  health.rs
