[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"
actix = "0.13"

# WebSocket
tokio-tungstenite = "0.27"
actix-web-actors = "4.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
